Fix issue of not being able to click expand/collapse buttons in dump.

--- a/styles.css
+++ b/styles.css
@@ -472,10 +472,6 @@ td pre.tracy-dump {
     margin: 0 !important;
 }
 
-#tracy-debug .tracy-dump {
-    position: relative;
-}
-
 .tracy-dump-location {
     float: none !important;
     position: absolute !important;
